test légende et README

--- a/iceberg/index.mkd
+++ b/iceberg/index.mkd
@@ -1,5 +1,13 @@
 ![overview of the interior text wrap 01](tot-later2.jpg)
+
+overview of the interior text wrap 01
+
 ![book cover](tot-later4.jpg) 
+
+book cover
+
 ![overview of the interior text wrap 02](tot-later5.jpg)
+
+overview of the interior text wrap 02
 
 
